--- a/app.html
+++ b/app.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
-</head>
+</head>p
 <body>
-
+    <h1>ampogi ni americano</h1>
 </body>
 </html>
